--- a/Week 1/In class/index.html
+++ b/Week 1/In class/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Welcome to Week 1 Creative Tech</h1>
-    <p>Lorem ipsum dolor sit <a href="https://www.google.com/"target="_blank">amet consectetur adipisicing</a> elit. Voluptatum expedita, non rerum doloremque ducimus laudantium dolores ea qui enim quam harum vitae excepturi, molestiae alias vero? Exercitationem laudantium inventore quisquam.</p>
+    <p>Hello, I'm a cute quokka from google internet pictures! :P <a href="https://www.google.com/"target="_blank">(Click here to access to Google)</a> Hope you have a nice day!</p>
     <img src="https://avatars.githubusercontent.com/u/1985146?v=4" alt="A cute quokka">
     <p>Nice to meet you!</p>
 </body>
