--- a/Week 1/Own-works/Visual-textual.html
+++ b/Week 1/Own-works/Visual-textual.html
@@ -80,6 +80,7 @@
   <div class="wrap">
     <h1>字符图像生成器 — Text Texture / ASCII Art</h1>
     <p>上传图片 → 调整字符集与宽度 → 生成由纯文本（HTML 字符）构成的图像。可选择彩色或单色输出。</p>
+    <p>Note: I used AI to help me to create this html.</p>
 
     <div class="controls">
       <div class="card">
