--- a/Week5/Assignment/index.html
+++ b/Week5/Assignment/index.html
@@ -12,6 +12,120 @@
     <script src="libraries/p5.sound.min.js"></script>
   </head>
 
+<style>
+    body {
+      margin: 0;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      background: #f3f3f3;
+      color: #222;
+    }
+
+    .page-wrap {
+      max-width: 960px;
+      margin: 24px auto 40px;
+      padding: 0 16px 40px;
+      background: #ffffff;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.06);
+      border-radius: 8px;
+    }
+
+    h1 {
+      margin-top: 0;
+    }
+
+    .notes-section {
+      margin: 24px 0 8px;
+      font-size: 14px;
+      line-height: 1.6;
+      color: #333;
+    }
+
+    .notes-section h2 {
+      font-size: 18px;
+      margin-bottom: 8px;
+    }
+
+    .notes-section p {
+      margin: 0 0 8px;
+    }
+
+    .sketch-gallery {
+      margin: 24px 0 8px;
+    }
+
+    .sketch-gallery h2 {
+      font-size: 18px;
+      margin-bottom: 8px;
+    }
+
+    .sketch-strip {
+      display: flex;
+      gap: 12px;
+      overflow-x: auto;
+      padding: 10px 4px 10px 0;
+      scroll-snap-type: x mandatory;
+    }
+
+    .sketch-strip img {
+      height: 180px;
+      flex: 0 0 auto;
+      border-radius: 6px;
+      object-fit: cover;
+      background: #ddd;
+      scroll-snap-align: start;
+    }
+
+    .sketch-hint {
+      font-size: 12px;
+      color: #666;
+      margin-top: 4px;
+    }
+
+    .bug {
+      margin: 20px 0 12px;
+      font-size: 14px;
+      line-height: 1.5;
+      color: #333;
+    }
+
+    canvas {
+      display: block;
+      margin: 0 auto 24px;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="page-wrap">
+    <section class="notes-section">
+      <h2>Process & Notes</h2>
+      <p>
+        In this project, I built an interactive rainbow system using multiple arcs.Instead of treating the rainbow as a fixed image, I explored how changing angle parameters can reshape its form.By adjusting arc angles over time, the rainbow becomes dynamic and responsive rather than static.
+      </p>
+    </section>
+
+    <section class="sketch-gallery">
+      <h2>Sketches</h2>
+      <div class="sketch-strip">
+        <img src="1.png" alt="Sketch 1">
+        <img src="2.png" alt="Sketch 2">
+        <img src="3.png" alt="Sketch 3">
+        <img src="4.png" alt="Sketch 4">
+        <img src="5.png" alt="Sketch 5">
+      </div>
+    </section>
+
+    <p class="bug">
+      At first, the rainbow edges looked jagged and polygon-like.This was caused by drawing arcs using too few points, which reduced smoothness.Switching back to the built-in arc() function fixed the visual issue.
+    </p>
+    
+    <p class="bug">
+      And adjusting the angle parameter caused the entire rainbow to rotate, instead of changing the arc length.I found this happened because the start and end angles exceeded TWO_PI, which changed how p5.js interpreted the arc.By limiting the angle range, the arcs expanded correctly.
+    </p>
+
+    <p class="bug">
+      This project helped me understand how small parameter changes can strongly affect visual systems.Through debugging, I learned to read geometric behavior instead of only adjusting values blindly.
+    </p>
   <body>
     <script src="sketch.js"></script>
   </body>
